Fix threading problems in requestdbclient
Disable Flakey tests, that do not run well
Resolve bean conflict, move to common project
Fix port in properties file for replacement
Fix threading problems in requestdbclient

Change-Id: I12d145863152d302da4fa0854db1c85286266e02
Issue-ID: SO-1034
Signed-off-by: Benjamin, Max (mb388a) <mb388a@us.att.com>

--- a/adapters/mso-requests-db-adapter/src/main/resources/application-local.yaml
+++ b/adapters/mso-requests-db-adapter/src/main/resources/application-local.yaml
@@ -12,10 +12,9 @@ mso:
       endpoint: http://localhost:8081
   logPath: logs
   site-name: localSite
-  adapters:
-    requestDb:
-      auth: Basic YnBlbDptc28tZGItMTUwNyE=
-      endpoint: http://localhost:8081
+  infra-requests:
+    archived:
+      period: 180
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/requestdb
@@ -50,6 +49,6 @@ management:
 flyway:
   baseline-on-migrate: false
   url: jdbc:mariadb://localhost:3306/requestdb
-  user: mso
-  password: mso123
+  user: catalog
+  password: catalog123
       
