Change json4s component version for scala
Change-Id: Idaa55084f5ecb0dd3536c232cebc14fb50000001
Issue-ID: SO-1013
Signed-off-by: Siva.ye <yezhihua@huawei.com>

--- a/pom.xml
+++ b/pom.xml
@@ -761,6 +761,16 @@
     			<artifactId>flyway-core</artifactId>
     			<version>4.2.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.json4s</groupId>
+				<artifactId>json4s-jackson_2.12</artifactId>
+				<version>3.6.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.json4s</groupId>
+				<artifactId>json4s-core_2.12</artifactId>
+				<version>3.6.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<profiles>
