--- a/mso-api-handlers/mso-api-handler-infra/pom.xml
+++ b/mso-api-handlers/mso-api-handler-infra/pom.xml
@@ -18,8 +18,6 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<swagger-version>1.3.0</swagger-version>
 		<jax-rs-version>1.1.1</jax-rs-version>
-		<json4s-jackson-version>3.2.4</json4s-jackson-version>
-		<json4s-core-version>3.0.0</json4s-core-version>
 		<reflections-version>0.9.9-RC1</reflections-version>
 		<paranamer-version>2.5.2</paranamer-version>
 		<scannotation-version>1.0.3</scannotation-version>
@@ -98,13 +96,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.json4s</groupId>
-			<artifactId>json4s-jackson_2.9.1-1</artifactId>
-			<version>${json4s-jackson-version}</version>
+			<artifactId>json4s-jackson_2.12</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.json4s</groupId>
-			<artifactId>json4s-core_2.9.2</artifactId>
-			<version>${json4s-core-version}</version>
+			<artifactId>json4s-core_2.12</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
