--- a/pom.xml
+++ b/pom.xml
@@ -761,6 +761,26 @@
     			<artifactId>flyway-core</artifactId>
     			<version>4.2.0</version>
 			</dependency>
+                        <dependency>
+                            <groupId>org.apache.commons</groupId>
+                            <artifactId>commons-email</artifactId>
+                            <version>1.5</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.codehaus.groovy</groupId>
+                            <artifactId>groovy-all</artifactId>
+                            <version>2.4.15</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.immutables</groupId>
+                            <artifactId>value</artifactId>
+                            <version>2.7.1</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.eclipse.jetty</groupId>
+                            <artifactId>jetty-server</artifactId>
+                            <version>9.4.12.v20180830</version>
+                        </dependency>
 		</dependencies>
 	</dependencyManagement>
 	<profiles>
