Fix issues with load spinner and stats
Fixing issues where stats returned Nan and
implementation of loading spinner

Change-Id: I989efb739ed244de3760476ce2dfff8928f51c86
Issue-ID: SO-727
Signed-off-by: Ronan Kenny <ronan.kenny@ericsson.com>

--- a/so-monitoring/so-monitoring-ui/src/main/frontend/package.json
+++ b/so-monitoring/so-monitoring-ui/src/main/frontend/package.json
@@ -26,6 +26,7 @@
     "bpmn-js": "^2.4.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ngx-spinner": "^6.1.2",
     "rxjs": "^6.0.0",
     "toastr": "^2.1.4",
     "zone.js": "^0.8.26"
