Add missing /app/ASDC folder
This is the folder used by asdc-controller to write the downloaded
artifacts.

Change-Id: Ie37e5351c59cfe02d8a6ce986efac4428c5e9dfd
Issue-ID: SO-1068
Signed-off-by: Alexis de Talhouët <adetalhouet89@gmail.com>

--- a/packages/docker/src/main/docker/docker-files/Dockerfile.so-app
+++ b/packages/docker/src/main/docker/docker-files/Dockerfile.so-app
@@ -7,7 +7,7 @@ ARG https_proxy
 ENV HTTPS_PROXY=$https_proxy
 ENV https_proxy=$HTTPS_PROXY
 
-RUN mkdir /app && mkdir /app/config && mkdir /app/certificates && mkdir /app/logs  && mkdir /app/ca-certificates
+RUN mkdir /app && mkdir /app/ASDC && mkdir /app/config && mkdir /app/certificates && mkdir /app/logs  && mkdir /app/ca-certificates
 
 COPY maven/app.jar /app
 COPY configs/logging/logback-spring.xml /app
