Add cloudSite Post to catalogDbClient
Issue-ID: SO-1081
Change-Id: I5808292c4b11413dfef07216d2b933b3358e4fae
Signed-off-by: Marcus G K Williams <marcus.williams@intel.com>

--- a/adapters/mso-catalog-db-adapter/src/test/resources/application-test.yaml
+++ b/adapters/mso-catalog-db-adapter/src/test/resources/application-test.yaml
@@ -1,5 +1,5 @@
 # TEST FILE
-catalog.db.endpoint: "http://localhost:"
+catalog.db.endpoint: http://localhost:${wiremock.server.port}
 
 ssl-enable: false 
 mso:
@@ -8,7 +8,7 @@ mso:
   catalog:
     db:
       spring:
-        endpoint: "http://localhost:"
+        endpoint: http://localhost:${wiremock.server.port}
   db:
     auth: Basic YnBlbDptc28tZGItMTUwNyE=
 
@@ -50,7 +50,7 @@ mariaDB4j:
   databaseName: catalogdb
   
 server:
-    port: 8080
+    port: ${wiremock.server.port}
     tomcat:
         max-threads: 50
 
