--- a/packages/docker/pom.xml
+++ b/packages/docker/pom.xml
@@ -394,7 +394,7 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.onap.so-monitoring</groupId>
+			<groupId>org.onap.so.monitoring</groupId>
 			<artifactId>so-monitoring-service</artifactId>
 			<version>${project.version}</version>
 		</dependency>
