AAI Distribution delay is now set during the flow
Change-Id: I2afbe144608925fc8aef6bf200daef85151b5899
Issue-ID: SO-1099
Signed-off-by: Lukasz Muszkieta <lukasz.muszkieta@nokia.com>
(cherry picked from commit e6391ed25043ce148efb3db1376f78a12a38b61b)

--- a/bpmn/mso-infrastructure-bpmn/src/main/resources/application-local.yml
+++ b/bpmn/mso-infrastructure-bpmn/src/main/resources/application-local.yml
@@ -3,6 +3,7 @@ aai:
   dme2:
     timeout: '30000'
   endpoint: http://localhost:8443
+  workflowAaiDistributionDelay: PT30S
 camunda:
   bpm:
     admin-user:
