Fixing SO-Monitoring UI tests
Change-Id: I0601c024474196dc965ec7a7f16c4bca11af80f9
Issue-ID: SO-1125
Signed-off-by: Ronan Kenny <ronan.kenny@ericsson.com>

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ packages/root-pack-extras/config-resources/mariadb/db-sql-scripts/main-schemas/M
 packages/root-pack-extras/config-resources/mariadb/db-sql-scripts/main-schemas/MySQL-Requests-schema.sql
 **/bin/
 /tattletale/
+/.metadata/
