bug fixes october 19th
Fixed issue with resource version being added twice.
added silent success to orch validation when unassign is not found
Removed SNAPSHOT from dependency
Fixed failing BBInputSetup tests
Updated apih tests to use networkInstanceGroup
Updated ModelType enum and fixed compilation issues
Change the place where the data for multistage gets set
Update treatment of PENDING_ACTIVATION VF_MODULE CREATE entries to
SILENT_SUCCESS to support first stage of multistage.
Implement second stage of multistage design VF Module Creation
Implementation of the first stage of multistage design for VF Module
creation.

Change-Id: I6d76282d1f37c081355cee72797d8e13da4e3cb0
Issue-ID: SO-1149
Signed-off-by: Benjamin, Max (mb388a) <mb388a@us.att.com>

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -137,7 +137,7 @@
 		<dependency>
 			<groupId>org.onap.logging-analytics</groupId>
   			<artifactId>logging-slf4j</artifactId>
-  			<version>1.2.2-SNAPSHOT</version>
+  			<version>1.2.2</version>
   			<exclusions>
 				<exclusion>
 					<groupId>com.att.eelf</groupId>
