--- a/common/pom.xml
+++ b/common/pom.xml
@@ -137,13 +137,7 @@
 		<dependency>
 			<groupId>org.onap.logging-analytics</groupId>
   			<artifactId>logging-slf4j</artifactId>
-  			<version>1.2.2-SNAPSHOT</version>
-  			<exclusions>
-				<exclusion>
-					<groupId>com.att.eelf</groupId>
-					<artifactId>eelf-core</artifactId>
-				</exclusion>
-			</exclusions>
+  			<version>1.2.2</version>
   		</dependency>
     </dependencies>
 	<build>
